Fix align of social link underlines
Set "vertical-align" only to <img> to prevent from wrong position
of anchor underlines.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -139,16 +139,13 @@ body {
 
     li {
       margin: 0 0 10px;
-
-      & * {
-        vertical-align: middle;
-      }
     }
 
     .social-icon {
       width: 50px;
       margin: 0 10px 0 0;
       border: 0 none;
+      vertical-align: middle;
     }
   }
 }
